loopdowhile.Poucet1.scala.error
Erreur de compilation :
Poucet1:16: error: 'while' expected but '}' found.
                          }} while (sortieTrouvee())
                           ^Poucet1:16: error: ';' expected but 'while' found.
                          }} while (sortieTrouvee())
                             ^