loopdowhile.Poucet1.scala.code
var x: Int = 0

for (compteur <- 1 to 5) {x = 0;
                          do {
                            avance();
                            if (estSurBiscuit()) {
                              x = x + 1;
                            }

                          if (x>=3) {
                            gauche();
                          }
                          else {
                            droite();
                          }
                          }} while (sortieTrouvee())

